--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,7 +26,7 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
-file.reference.mysql-connector.jar.zip=D:\\jar files\\mysql-connector.jar.zip
+file.reference.mysql-connector-j-8.0.33.jar=D:\\jar files\\mysql-connector.jar\\mysql-connector-j-8.0.33\\mysql-connector-j-8.0.33.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -36,7 +36,7 @@ j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.ho
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector.jar.zip}
+    ${file.reference.mysql-connector-j-8.0.33.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
